--- a/31-Environment-Variables/.env
+++ b/31-Environment-Variables/.env
@@ -1,17 +1,17 @@
 # Development settings:
-HOST = 127.0.0.1
-PORT = 8000
+# HOST = 127.0.0.1
+# PORT = 8000
 # COMBINED = ${HOST}:${PORT}
 # ROOT_URL = ${HOST}/
-# ADMIN_EMAIL = aldolammel@gmail.com
+# ADMIN_EMAIL = abcoo.ideias@gmail.com
 
 # Database:
 # I'm using https://railway.app in this example:
-DB_NAME = 'railway'
+DB_NAME = 'xxxxxxx'
 DB_HOST = 'xxxxxx'
 DB_PORT = 'xxxxxx'
-DB_USER = 'postgres'
+DB_USER = 'xxxxxx'
 DB_PWD = 'xxxxxx'
 
 # Security:
-SECRET_KEY = 'django-insecure-5lk10_451&wyq5t%yoy6*eux067r%0jcqb5spgh=1r65n0)%ml'
+SECRET_KEY = 'set_here_your_code_-_if_django_copy_that_from_the_settings_py_file'
