--- a/31-Environment-Variables/.env
+++ b/31-Environment-Variables/.env
@@ -1,17 +1,7 @@
-# Development settings:
-# HOST = 127.0.0.1
-# PORT = 8000
-# COMBINED = ${HOST}:${PORT}
-# ROOT_URL = ${HOST}/
-# ADMIN_EMAIL = abcoo.ideias@gmail.com
-
-# Database:
-# I'm using https://railway.app in this example:
-DB_NAME = 'xxxxxxx'
-DB_HOST = 'xxxxxx'
-DB_PORT = 'xxxxxx'
-DB_USER = 'xxxxxx'
-DB_PWD = 'xxxxxx'
-
-# Security:
-SECRET_KEY = 'set_here_your_code_-_if_django_copy_that_from_the_settings_py_file'
+# PROJECT SETTINGS:
+DEBUG=True
+SECRET_KEY='set_here_your_code_-_if_django_copy_that_from_the_settings_py_file'
+ALLOWED_HOSTS=.exampledomain.com,localhost,127.0.0.1
+# DATABASE SETTINGS:
+# dont change the 'DATABASE_URL' variable! It's a internal django-environ var!
+DATABASE_URL=postgresql://xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
