--- a/31-Environment-Variables/.env
+++ b/31-Environment-Variables/.env
@@ -4,4 +4,6 @@ SECRET_KEY='set_here_your_code_-_if_django_copy_that_from_the_settings_py_file'
 ALLOWED_HOSTS=.exampledomain.com,localhost,127.0.0.1
 # DATABASE SETTINGS:
 # dont change the 'DATABASE_URL' variable! It's a internal django-environ var!
+# Critical: make sure the host domain is responding, using the ping command!
+# Sometimes, database_url can be replaced by its public value version.
 DATABASE_URL=postgresql://xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
