--- a/31-Environment-Variables/.env
+++ b/31-Environment-Variables/.env
@@ -1,5 +1,6 @@
 # PROJECT SETTINGS:
 DEBUG=True
+ADMIN_EMAIL=example@gmail.com
 SECRET_KEY='set_here_your_code_-_if_django_copy_that_from_the_settings_py_file'
 ALLOWED_HOSTS=.exampledomain.com,localhost,127.0.0.1
 # DATABASE SETTINGS:
