--- a/31-Environment-Variables/env-for-cloud/.env
+++ b/31-Environment-Variables/env-for-cloud/.env
@@ -7,3 +7,5 @@ ALLOWED_HOSTS=.exampledomain.com,localhost,127.0.0.1
 # Critical: make sure the host domain is responding, using the ping command!
 # Sometimes, database_url can be replaced by its public value version.
 DATABASE_URL=postgresql://xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# EMAIL SETTINGS:
+# Reserved space
