--- a/31-Environment-Variables/env-for-local/.env
+++ b/31-Environment-Variables/env-for-local/.env
@@ -8,3 +8,5 @@ DATABASE_USER=your_db_user  # postgres default postgres
 DATABASE_PASSWORD=your_db_password
 DATABASE_HOST=your_db_host  # postgres default localhost
 DATABASE_PORT=your_db_port # postgres default 5432
+# EMAIL SETTINGS:
+# Reserved space
