--- a/31-Environment-Variables/env-for-cloud/.env
+++ b/31-Environment-Variables/env-for-cloud/.env
@@ -8,4 +8,4 @@ ALLOWED_HOSTS=.exampledomain.com,localhost,127.0.0.1
 # Sometimes, database_url can be replaced by its public value version.
 DATABASE_URL=postgresql://xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 # EMAIL SETTINGS:
-# Reserved space
+# Reserved space  # /33-Web-development/backend/django/13-email/config-settings.txt
