--- a/31-Environment-Variables/env-for-local/.env
+++ b/31-Environment-Variables/env-for-local/.env
@@ -9,4 +9,4 @@ DATABASE_PASSWORD=your_db_password
 DATABASE_HOST=your_db_host  # postgres default localhost
 DATABASE_PORT=your_db_port # postgres default 5432
 # EMAIL SETTINGS:
-# Reserved space
+# Reserved space  # /33-Web-development/backend/django/13-email/config-settings.txt
