--- a/.gitignore
+++ b/.gitignore
@@ -167,7 +167,7 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-.idea/
+#.idea/
 
 ### Flask ###
 instance/*
@@ -323,6 +323,7 @@ Temporary Items
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
+.idea/
 .idea/workspace.xml
 .idea/**/workspace.xml
 .idea/tasks.xml
