--- a/Environment-Variables/env-for-local/.env
+++ b/Environment-Variables/env-for-local/.env
@@ -1,7 +1,12 @@
 # PROJECT SETTINGS:
 DEBUG=True
-SECRET_KEY='set_here_your_code_-_if_django_copy_that_from_the_settings_py_file'
+SECRET_KEY="set_here_your_code_-_if_django_copy_that_from_the_settings_py_file"
 ALLOWED_HOSTS=.exampledomain.com,localhost,127.0.0.1
+BACK_URL1=http://localhost:8000/
+BACK_URL2=http://127.0.0.1:8000/
+# FRONTEND SETTINGS:
+#FRONT_URL1=http://localhost:5173/
+#FRONT_URL2=http://127.0.0.1:5173/
 # DATABASE SETTINGS:
 DATABASE_NAME=your_db_name  # postgres default postgres
 DATABASE_USER=your_db_user  # postgres default postgres
@@ -9,4 +14,8 @@ DATABASE_PASSWORD=your_db_password
 DATABASE_HOST=your_db_host  # postgres default localhost
 DATABASE_PORT=your_db_port # postgres default 5432
 # EMAIL SETTINGS:
-# Reserved space  # /33-Web-development/backend/python/django/13-email/config-settings.txt
+# Reserved space  # /Python/Web-development/django/13-email/config-settings.txt
+# Other e-mails are in /core/constants.py!
+EMAIL_HOST_USER=abcoo.ideias@gmail.com
+EMAIL_HOST_PASSWORD=password_generated_by_gmail_for_example
+DEFAULT_FROM_EMAIL=abcoo.ideias@gmail.com
