--- a/Web-Development/frontend/Vue/3-component-libraries/vue-router/example-SPA/project_one/.env_example
+++ b/Web-Development/frontend/Vue/3-component-libraries/vue-router/example-SPA/project_one/.env_example
@@ -1,6 +1,8 @@
 # PROJECT SETTINGS:
 ...
-VITE_BASE_URL=http://localhost:8000/  # Production: https://client_app_main_domain.com/
+# FRONTEND SETTINGS:
+...
+VITE_BASE_URL=http://localhost:8000  # Under Production, change it to the client PROD_BASE_URL!
 VITE_ROUTER_BASE=/
 # DATABASE SETTINGS:
 ...
