--- a/.gitignore
+++ b/.gitignore
@@ -130,8 +130,8 @@ celerybeat.pid
 
 # Environments
 #.env  <--- in this case i am using this file as an example in wiki, so don't ignore it.
+frontend/.env
 .venv
-.venv_studies
 env/
 venv/
 ENV/
