--- a/Environment-Variables/env-for-local/in-backend/.env
+++ b/Environment-Variables/env-for-local/in-backend/.env
@@ -1,10 +1,9 @@
-# PROJECT SETTINGS:
+# BACKEND SETTINGS:
 DEBUG=True
 SECRET_KEY="set_here_your_code_-_if_django_copy_that_from_the_settings_py_file"  # Important double-quotes!
 ALLOWED_HOSTS=.exampledomain.com,localhost,127.0.0.1
 BACK_URL1=http://localhost:8000/
 BACK_URL2=http://127.0.0.1:8000/
-# FRONTEND SETTINGS:
 #FRONT_URL1=http://localhost:5173/
 #FRONT_URL2=http://127.0.0.1:5173/
 # DATABASE SETTINGS:
