--- a/Web-Development/frontend/Vue/3-component-libraries/vue-router/example-SPA/project_one/.env_example
+++ b/Web-Development/frontend/Vue/3-component-libraries/vue-router/example-SPA/project_one/.env_example
@@ -1,8 +1,5 @@
-# PROJECT SETTINGS:
-...
 # FRONTEND SETTINGS:
 ...
-VITE_BASE_URL=http://localhost:8000  # Under Production, change it to the client PROD_BASE_URL!
+VITE_PROD_BASE_URL=https://client-main-domain.com
+VITE_BASE_URL=http://localhost:8000  # Under Production, replace it by VITE_PROD_BASE_URL value!
 VITE_ROUTER_BASE=/
-# DATABASE SETTINGS:
-...
