--- a/Python/Web-development/pyproject.toml
+++ b/Python/Web-development/pyproject.toml
@@ -1,3 +1,9 @@
+[project.urls]
+"Homepage" = "https://xxxxxxxxxxxxxxxxxxx"
+"Repository" = "https://github.com/xxxxxxxxxxx/"
+"Documentation" = "https://github.com/xxxxxxxxxxxxxxx/README.md"
+"Bug Tracker" = "https://not-applied"
+
 [project]
 name = "xxxxxxxxxxxxxxxxxx"
 version = "0.1.0"
@@ -16,14 +22,11 @@ classifiers = [
     "Development Status :: 4 - Beta"
 ]
 dependencies = []
-[dependency-groups]
-dev = []
 
-[project.urls]
-"Homepage" = "https://xxxxxxxxxxxxxxxxxxx"
-"Repository" = "https://github.com/xxxxxxxxxxx/"
-"Documentation" = "https://github.com/xxxxxxxxxxxxxxx/README.md"
-"Bug Tracker" = "https://not-applied"
+[project.optional-dependencies]
+dev = []
+test = []
+docs = []
 
 # Python Linter and Formatter:
 # Reserved space...
