--- a/Python/Web-development/pyproject.toml
+++ b/Python/Web-development/pyproject.toml
@@ -6,7 +6,7 @@
 
 [project]
 name = "xxxxxxxxxxxxxxxxxx"
-version = "0.1.0"
+version = "0.1.0"  # There is a way to make it dynamic with repository!!!
 description = "xxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -22,6 +22,10 @@ classifiers = [
     "Development Status :: 4 - Beta"
 ]
 dependencies = []
+
+# [dependency-groups]
+# Don't use it 'coz it's not compactible with many tools!
+# That said, keep using [project.optional-dependencies].
 
 [project.optional-dependencies]
 dev = []
