--- a/Python/Web-development/django/Linter-Formatter-Typechecker/django-stubs/pyproject-for-mypy.toml
+++ b/Python/Web-development/django/Linter-Formatter-Typechecker/django-stubs/pyproject-for-mypy.toml
@@ -1,9 +1,11 @@
 # This file is a model of Django-Stubs configuration in pyproject.toml
 
-# Django static type checker:
+# Python static type checker:
 [tool.mypy]
 ...
-plugins = ["mypy_django_plugin.main"]
+plugins = [
+    "mypy_django_plugin.main", # Adding Type checking for Django too.
+]
 disable_error_code = [
     "var-annotated",  # Stop MyPy to demand Type Annotations for, e.g., model fields w/ M2M relationships.
 ]
