--- a/JavaScript/Web-development/frontend/Vue/3-component-libraries/vue-router/example-SPA/project_one/.env_example
+++ b/JavaScript/Web-development/frontend/Vue/3-component-libraries/vue-router/example-SPA/project_one/.env_example
@@ -3,3 +3,5 @@
 VITE_PROD_BASE_URL=https://client-main-domain.com
 VITE_BASE_URL=http://localhost:8000  # Under Production, replace it by VITE_PROD_BASE_URL value!
 VITE_ROUTER_BASE=/
+
+# Vite automatically searches for VITE_ prefix env vars, and it's accessible via import.meta.env.<env_var_here>
