--- a/IDE/vscode/examples/.vscode/settings.json
+++ b/IDE/vscode/examples/.vscode/settings.json
@@ -1,1 +1,7 @@
-// /Python/IDE-softwares/vscode/examples/settings.json
+/* 
+    Python Project example:
+    /Python/IDE-softwares/vscode/examples/settings.json
+    
+    JavaScript Project example:
+    /JavaScript/IDE-softwares/vscode/examples/settings.json
+*/
