--- a/Python/IDE-softwares/vscode/examples/.vscode/settings.json
+++ b/Python/IDE-softwares/vscode/examples/.vscode/settings.json
@@ -18,11 +18,10 @@
     "python.analysis.autoImportCompletions": false, // Disable auto-import IntelliSense suggestions.
     "python.analysis.completeFunctionParens": true, // Auto add parentheses after function.
     "[python]": {},
-    // FILE ASSOCIATIONS - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+    // FILES - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
     "files.associations": { // Tell VSCode how to treat files based on patterns.
         "*.json": "jsonc",
     },
-    // FILE EXCLUSIONS - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
     "files.exclude": { // Files/folders to hide from the VSCode explorer.
         //"**/__pycache__": true,
         //"**/*.pyc": true,
@@ -31,7 +30,6 @@
         //"**/.venv": true,
         //"**/.git": true,
     },
-    // SEARCH EXCLUSIONS - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
     "search.exclude": { // Files/folders to hide from the VSCode searchings.
         "**/venv": true,
         "**/.venv": true,
