--- a/Python/IDE-softwares/vscode/examples/.vscode/settings.json
+++ b/Python/IDE-softwares/vscode/examples/.vscode/settings.json
@@ -19,7 +19,8 @@
     "python.analysis.completeFunctionParens": true, // Auto add parentheses after function.
     "[python]": {},
     // FILES - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-    "files.associations": { // Tell VSCode how to treat files based on patterns.
+    // Tell VSCode how to treat files based on patterns:
+    "files.associations": {
         "*.json": "jsonc",
     },
     // Files/folders to hide from the VSCode explorer:
