--- a/Python/Web-development/pyproject.toml
+++ b/Python/Web-development/pyproject.toml
@@ -9,7 +9,7 @@ name = "xxxxxxxxxxxxxxxxxx"
 version = "0.1.0"  # There is a way to make it dynamic with repository!!!
 description = "xxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.13, <=3.14"
 license = {text = "MIT"}
 authors = [
     {name = "Aldo Lammel", email = "aldolammel@gmail.com"}
