--- a/Python/IDE-softwares/vscode/examples/.vscode/settings.json
+++ b/Python/IDE-softwares/vscode/examples/.vscode/settings.json
@@ -40,6 +40,6 @@
         "**/*.pyc": true,
         "**/.git": true,
     },
-    // LANGUAGE, DICTIONARY STUFF - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+    // HUMAN LANGUAGE, DICTIONARY STUFF - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
     // Never in project, always in the developer profiles!
 }
